--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,10 +1,11 @@
 model_name: residual_sr
 scale: 2
-num_res_blocks: 4
+num_res_blocks: 8
+channels: 64
 
-patch_size: 96
+patch_size: 128
 batch_size: 8
-epochs: 50
+epochs: 200
 learning_rate: 0.0001
 
 mixed_precision: true
